set up jquery, minor changes to nav bar

--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,13 @@
 #nav_bar_content {
 }
 
-.nav_link {
-    min-width: 80px;   
+.nav_link_button {
+    padding: 20px;   
+    margin: 10px;
     text-align: center;
     display: inline;
+}
+
+.nav_link {
+    
 }
