--- a/css/app.css
+++ b/css/app.css
@@ -30,7 +30,7 @@
 
 
 
-h1 {
+h2 {
 	font-family: 'KohinoorBanglaMedium', sans-serif;
 }
 a {
@@ -73,11 +73,18 @@ ul#tabs li a.selected {
 
 div.large-12-columns{ 
 	padding: 0.5em; 
-	background-color: #f1f0ee; 
 }
 
 div.large-12-columns.hide { 
 	display: none; 
+}
+
+.homepage-text{	background-color: #f1f0ee; 
+}
+
+.homepage-title{
+		background-color: #f1f0ee; 
+
 }
 
 #logo_top_container{
@@ -113,6 +120,7 @@ div.large-12-columns.hide {
 }
 
 .nav_link {
-
+	color: #000; 
+	padding: 0.7em 0.3em 0.38em 0.3em;
 
 }
