--- a/css/app.css
+++ b/css/app.css
@@ -124,16 +124,39 @@ font-family: 'Baskerville', Verdana, Arial, Sans-Serif;
     margin-top: 100px;  
 }
 
+#nav_bar_list {
+    list-style: none;
+    padding: 0;
+    list-style-type: none;
+}
+
 .nav_link_button {
     text-align: center;
     padding: 20px;   
     margin: 10px;
+    display: inline;
+}
+
+#nav_bar_small {
+    display: none;
+}
+
+#nav_bar_small_list {
+    list-style: none;   
+    padding: 0;
+    list-style-type: none;
+}
+
+.nav_link_button_small {
+    text-align: center;
+    display: inline;
+    min-width: 30%;
+    vertical-align: center;
 }
 
 .nav_link {
 	color: #000; 
 	padding: 0.7em 0.3em 0.38em 0.3em;
-
 }
 
 @media screen and (max-width: 650px) {
@@ -145,5 +168,8 @@ font-family: 'Baskerville', Verdana, Arial, Sans-Serif;
 @media screen and (max-width: 420px) {
     #nav_bar {
         display: none;   
+    }
+    #nav_bar_small {
+        display: block;   
     }
 }
