--- a/css/app.css
+++ b/css/app.css
@@ -41,8 +41,7 @@ a {
 
 
 body { 
-	font-size: 80%; 
-	font-family: 'Baskerville', Verdana, Arial, Sans-Serif;
+	font-family: 'Baskerville', Times, serif;
 }
 
 ul#tabs { 
