--- a/css/app.css
+++ b/css/app.css
@@ -29,14 +29,50 @@
 }
 
 
+h1 {
+	margin-top: 1em;
+	font-family: 'GothamBold', 'Helvetica', sans-serif;
+	font-size: 2.5rem;
+	border-bottom: 4px solid;
+}
+
+.colorA {
+	color: #20406F;
+	border-bottom-color: #20406F;
+}
+
+.colorB {
+	color: #4D668C;
+	border-bottom-color: #4D668C;
+}
+
+.colorC {
+	color: #798DA9;
+	border-bottom-color: #798DA9;
+}
+
+.medium-push-4 h1, .medium-push-4 p {
+	text-align: right;
+}
+
+a {
+	font-family: 'GothamMedium', sans-serif;
+	color: #20406F;
+}
+
+a:hover {
+	font-family: 'GothamMedium', sans-serif;
+	color: #0080C5;
+}
+
+button {
+	background-color: #0080C5;
+}
 
 h2 {
 	font-family: 'GothamMedium', sans-serif;
 }
 
-a {
-	font-family: 'GothamMedium', sans-serif;
-}
 
 
 
