--- a/css/app.css
+++ b/css/app.css
@@ -132,7 +132,7 @@ div.large-12-columns.hide {
 	font-family: 'GothamBold', 'Helvetica', sans-serif;
 	font-size: 2.5rem;
 	line-height: 3rem;
-	margin-top: 2rem;
+	margin-top: 2.5rem;
 	margin-bottom: 2rem;
 	color: #0080C5;
 }
@@ -156,6 +156,8 @@ div.large-12-columns.hide {
     justify-content: center;
     align-items: center;
     background-color: white;
+    z-index: 1;
+    border-bottom: 1px solid #ddd;
 }
 
 .sticky {
@@ -212,9 +214,7 @@ div.large-12-columns.hide {
 
 .nav-section a:hover{
 	/*background-color: #f1f0ee; */
-	color: #42454a; 
-	background-color: #dedbde; 
-	border: 1px solid #c9c3ba; 
+	color: #0080C5;
 	border-bottom: none; padding: 0.3em; 
 	text-decoration: none; 
 }
