--- a/css/app.css
+++ b/css/app.css
@@ -175,7 +175,8 @@ div.large-12-columns.hide {
     margin-top: 85px;  
 }
 
-#nav_bar_list {
+#nav_bar_list, #nav_bar_small_list {
+    text-indent: -1.25em;   
     list-style: none;
     padding: 0;
     list-style-type: none;
@@ -199,8 +200,6 @@ div.large-12-columns.hide {
 }
 
 #nav_bar_small_list {
-    list-style: none;   
-    list-style-type: none;
     display: -webkit-flex;
     display: flex;
     flex-direction: row;
@@ -261,7 +260,7 @@ div.large-12-columns.hide {
         height: 100px;
         flex-direction: column;
         flex-wrap: wrap;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
     }
 }
