change financial info to list

--- a/css/app.css
+++ b/css/app.css
@@ -76,6 +76,11 @@ a:hover {
 	border-bottom: 1px solid #F8CF23;
 }
 
+p a {
+	font-size: 0.8em;
+	font-weight: bold;
+}
+
 button {
 	background-color: #0080C5;
 }
