--- a/css/app.css
+++ b/css/app.css
@@ -102,6 +102,10 @@ body {
     padding-bottom: 60px;
 }
 
+p {
+	font-size: 18px;
+}
+
 ul#tabs { 
 	list-style-type: none; 
 	margin: 30px 0 0 0; 
