--- a/css/app.css
+++ b/css/app.css
@@ -46,7 +46,6 @@ h1 {
 b {
 	font-family: 'GothamMedium', sans-serif;
 	color: #333;
-	font-size: 0.8em;
 }
 
 .colorA {
@@ -85,7 +84,6 @@ a:hover {
 }
 
 p a {
-	font-size: 0.8em;
 	font-weight: bold;
 }
 
@@ -98,12 +96,12 @@ h2 {
 }
 
 body { 
-	font-family: 'Baskerville', Times, serif;
+	font-family: 'GothamRoundedBook', Helvetica, sans-serif;
     padding-bottom: 60px;
 }
 
 p {
-	font-size: 18px;
+	font-size: 16px;
 }
 
 ul#tabs { 
@@ -145,7 +143,7 @@ div.large-12-columns.hide {
 }
 
 .homepage-text{	/*background-color: #f1f0ee; */
-	font-family: 'Baskerville', Times, serif;
+	font-family: 'GothamRoundedBook', Helvetica, sans-serif;
 }
 
 .about {
