--- a/css/app.css
+++ b/css/app.css
@@ -332,3 +332,15 @@ footer {
 	padding: 1%;
 }
 
+@media screen and (max-width: 400px) {
+	.img-top {
+		width: 50%;
+		padding: 3%;
+	}
+
+	.img-bottom {
+		width: 20%;
+		padding: 2%;
+	}
+}
+
